# Matrix

./: 2  7.7z  CMakeLists.txt  m  paperdata  s  s.7z  s3  s7  s8  v5  vis3  w3  z
src/: CMakeLists.txt  matrix.cpp  matrix.h  pdBand.h  vector.cpp  vector.h
test/: CMakeLists.txt  test.cpp
